# miniRT

./: CMakeLists.txt  Makefile  cub3D  main.c
examples/: gay.cub  gay1.cub
get_next_line/: get_next_line.c  get_next_line_utils.c
includes/: cub3d.h  get_next_line.h  libft.h  minirt.h
libft/: Makefile  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_split.c  ft_strchr.c  ft_strdup.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strmapi.c  ft_strncmp.c  ft_strnstr.c  ft_strrchr.c  (+7 more)
mlx/: draw.c  raycast.c  raycast_utils.c  textures.c
mlx_mac/: Makefile  mlx.h  mlx_get_screene_size.m
parse/: check_errors_with_file.c  map_utils.c  mass_utils.c  parser.c  safe_exit.c  utils.c
textures/: bluestone .xpm  eagle.xpm  pillar.xpm  redbrick.xpm  wood.xpm
